--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: AMOF Game Engine
 description: A game engine based on AdvancedMogreFramework including Network, Physx, AI and so on.
 google_analytics: 
 show_downloads: true
-theme: jekyll-theme-slate
+theme: jekyll-theme-tactile
 
 gems:
   - jekyll-mentions
